--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "mongo-test",
+  "private": true,
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "koa": "^2.13.0",
-    "koa-router": "^9.4.0",
-    "mongodb": "^3.6.1"
+  "scripts": {
+    "start": "pnpm run --filter '*' start",
+    "dev": "pnpm run --filter '*' dev"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/koa": "^2.11.4",
-    "@types/koa-router": "^7.4.1",
-    "@types/mongodb": "^3.5.27",
-    "glob": "^7.1.6",
-    "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
-  },
-  "scripts": {
-    "dev": "ts-node-dev ./src/index.ts -c ./tsconfig.json --watch --clear"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "@types/glob": "^7.2.0",
+    "@types/koa": "^2.13.5",
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-router": "^7.4.4",
+    "@types/koa-static": "^4.0.2",
+    "@types/node": "^18.14.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5"
+  }
 }
