--- a/packages/hero/package.json
+++ b/packages/hero/package.json
@@ -14,6 +14,10 @@
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0"
   },
+  "peerDependencies": {
+    "@types/koa": "^2.13.6",
+    "@types/koa-router": "^7.4.4"
+  },
   "files": [
     "dist"
   ],
